syntax = "proto3";

package auth;

service AuthService {
    rpc login(LoginRequest) returns (AuthenticationResponse) {}
    rpc register(RegisterRequest) returns (AuthenticationResponse) {}
}

message AuthenticationResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string token = 4;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}


